fixed alignment of hero section

--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 
 body {
   font-family: 'Muli', sans-serif;
-  height: 100%;
+  height: 100vh;
   margin: 0;
   overflow-x: hidden;
   background-color: #fff;
@@ -23,7 +23,7 @@ body {
 .overlay {
   height: 100%;
   width: 100%;
-  padding: 20px 40px 40px 40px;
+  padding: 100px 40px 40px 100px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -34,24 +34,26 @@ body {
 .logo {
   width: 480px;
   height: auto;
+  margin-bottom: 40px;
 }
 
 .content {
-  margin-top: 30px;
+  margin-top: 0;
   color: #fff;
 }
 
 .content h2 {
   font-size: 28px;
   line-height: 1.5;
-  margin-bottom: 20px;
-  margin-left: 48px;
+  margin-top: 30px;
+  margin-bottom: 40px;
+  margin-left: 64px;
   max-width: 400px;
 }
 
 .btn {
   padding: 10px 20px;
-  margin-left: 48px;
+  margin-left: 64px;
   background: linear-gradient(to right, #475b9c, #d37047);
   color: white;
   text-decoration: none;
@@ -64,7 +66,6 @@ body {
   background: linear-gradient(to right, #3b4d84, #ba5f3c);
 }
 
-/* Nav-bar section */
 .nav-bar {
   padding: 40px 0;
   background: #f9f9f9;
